[package]
name = "LSSVMPair"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lssvm_pair"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
arrayref = "0.3.7"
enum_dispatch = "0.3.12"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "1.16.13"
spl-math = { version = "0.2", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.9", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }